# task-tracker

./: .gitignore  MANIFEST.in  README.md  demo.tape  main.py  parser.py  pyproject.toml  task.py  tasklist.py  taskstorage.py
.github/workflows/: tests.yml
task_tracker/: __init__.py  formatter.py  main.py  parser.py  task.py  tasklist.py  taskstorage.py
tests/: test_main.py  test_parser.py
