[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "task-tracker"
version = "0.1.0"
description = "Task Tracker practice from Roadmap.sh Projects"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
authors = [
    {name = "Jafeth Garro", email = "45522320+IAmJafeth@users.noreply.github.com"}
]
keywords = ["cli", "task-manager", "todo", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

[project.scripts]
task-tracker = "task_tracker.main:main"

[project.urls]
Homepage = "https://github.com/IAmJafeth/task-tracker"
Repository = "https://github.com/IAmJafeth/task-tracker"
